--- a/.gitattributes
+++ b/.gitattributes
@@ -17,6 +17,4 @@
 *.RTF	 diff=astextplain
 
 # Linguist Language
-$ cat .gitattributes
-*.rb linguist-language=GLSL
-*.rb linguist-vendored=GLSL
+*.shader linguist-language=GLSL
